--- a/blog/blog_project/blog/templates/blog/layout.html
+++ b/blog/blog_project/blog/templates/blog/layout.html
@@ -57,7 +57,7 @@
             <ul class="nav navbar-nav navbar-right">
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">
+                <a class="nav-link" href="{% url 'accounts/logout' %}">
                   <span class="glyphicon glyphicon-log-out">
 
                   </span> Welcome
